--- a/LMSWeb/WebContent/admin.html
+++ b/LMSWeb/WebContent/admin.html
@@ -11,7 +11,10 @@
 <p>
 <a href="author.jsp">Add/Update/Delete/View Authors</a><br/>
 <a href="book.jsp">Add/Update/Delete/View Books</a><br/>
-<a href="publisher.html">Add/Update/Delete/View Publishers</a><br/>
+<a href="publisher.jsp">Add/Update/Delete/View Publishers</a><br/>
+<a href="users.jsp">Add/Update/Delete/View Borrowers</a><br/>
+<a href="branchdetails.jsp">Add/Update/Delete/View Branches</a><br/>
+<a href="genre.jsp">Add/Update/Delete/View Genres</a><br/>
 <a href="date.jsp">Extend Due Date</a><br/>
 <a href="index.html">Previous Page</a><br/>
 </p>
